--- a/author.html
+++ b/author.html
@@ -11,10 +11,10 @@
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
     <a class="navbar-brand" href="#">jQuery quotes</a>
     <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">All <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
+        <a class="nav-link" href="index.html">All <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" href="#">Author</a>
       </li>
       <li class="nav-item">
@@ -33,7 +33,7 @@
             <img class="figure-img img-fluid img-rounded" src="images/einstein.jpg" alt="">
           </figure>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9 col-md-offset-1">
           <h1 class="display-3">Albert Einstein</h1>
           <a href="#" class="btn btn-primary" id="js-request">Charger le texte</a>
           <p id="js-bio"></p>
@@ -42,6 +42,9 @@
     </div>
   </div>
 
-  <!-- insert JavaScript here -->
+<script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/jsAuthor.js"></script>
 </body>
 </html>
